<package format="3">
  <name>mav_asif_msgs</name>
  <version>0.0.1</version>
  <description>mav_asif_msgs</description>
  <maintainer email="christian.llanes@gatech.edu">Christian Llanes</maintainer>
  <author email="christian.llanes@gatech.edu">Christian Llanes</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
